Practicas/Practica 5/ficheros/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtualhost
spec:
  rules:
  - host: "alpaca.dyd.eus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alpaca
            port:
              number: 80
  - host: "bandicoot.dyd.eus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bandicoot
            port:
              number: 80
